<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_water_drop_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/analytics_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
        android:title="@string/title_dashboard" />

    <!-- Spacer item for center gap -->
    <item
        android:id="@+id/navigation_spacer"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/event_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_profile" />
</menu>