<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.davidwxcui.waterwise.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <action
        android:id="@+id/action_homeFragment_to_friendsFragment"
        app:destination="@id/friendsFragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.davidwxcui.waterwise.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/add_fragment"
        android:name="com.davidwxcui.waterwise.ui.add.AddFragment"
        android:label="Add" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.davidwxcui.waterwise.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.davidwxcui.waterwise.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/navigation_login" />

        <action
            android:id="@+id/action_profile_to_edit"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.davidwxcui.waterwise.ui.profile.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register" />
    </fragment>


    <fragment
        android:id="@+id/navigation_register"
        android:name="com.davidwxcui.waterwise.ui.profile.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.davidwxcui.waterwise.ui.profile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />

    <!-- Global action accessible from any fragment -->
    <action
        android:id="@+id/action_global_to_add"
        app:destination="@id/add_fragment"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="false" />


    <!-- Friends Page -->
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.davidwxcui.waterwise.ui.friends.FriendsFragment"
        android:label="Friends" />

    <fragment
        android:id="@+id/friendRequestsFragment"
        android:name="com.davidwxcui.waterwise.ui.friends.FriendRequestsFragment"
        android:label="Friend Requests" />


    <!-- NEW: User Ranking Page -->
    <fragment
        android:id="@+id/navigation_user_ranking"
        android:name="com.davidwxcui.waterwise.ui.home.UserRankingFragment"
        android:label="Ranking"
        tools:layout="@layout/fragment_user_ranking" >
        <action
            android:id="@+id/action_navigation_user_ranking_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/gameRankingFragment"
        android:name="com.davidwxcui.waterwise.minigame.GameRankingFragment"
        android:label="Game Ranking" />

</navigation>
